Fix search for unsaved files

Search for unsaved files doesn't work because we don't have QUrl's for
them. Instead use KTextEditor::Document pointer for such files.

Included is a small fix that I noticed while working on this. If you try
to replace checked after searching, the file that you have opened doesn't
get highlights as it should.

Possible further improvements:
- Ask main window for the "tab title" of the doc so that we can use
  that in the search tree view. Otherwise its kind of really ambigous

BUG: 434287
Signed-off-by: Waqar Ahmed <waqar.17a@gmail.com>