addons/katebuild-plugin/highlighter.h
@@ -1,0 +1,21 @@
+//
+// Description: Widget for configuring build targets
+//
+// SPDX-FileCopyrightText: 2011-2014 Kåre Särs <kare.sars@iki.fi>
+//
+//  SPDX-License-Identifier: LGPL-2.0-only
+
+#ifndef HIGHLIGHTER_H
+#define HIGHLIGHTER_H
+
+#include <QSyntaxHighlighter>
+
+class Highlighter : public QSyntaxHighlighter
+{
+public:
+    using QSyntaxHighlighter::QSyntaxHighlighter;
+
+private:
+};
+
+#endif
